--- a/style.css
+++ b/style.css
@@ -1,49 +1,21 @@
-.titulo{
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+body{
+    background-color: #ccc;
+    margin: 10%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.bordavazada{
-    border: 5px;
-    border-style: solid;
-    width: 40%;
-    color: black;
-    height: 20%;
-    margin-left: 30%;
-    margin-top: 5%;
+table{
+    margin: 2%;
 }
-.bordavermelha{
-    margin: 10px;   
-    width: 100px;
-    height: 80px;
-    background-color: red;
-}
-.bordaamarela{
-    margin: 10px;
-    width: 100px;
-    height: 80px;
-    background-color: yellow;
-}
-
-.coloridos{
+.container{
+    border: 2px solid #ccc;
+    background-color: #ccc;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     display: flex;
-    margin-left: 31%;
-    
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
-.bordaverde{
-    width: 100px;
-    height: 80px;
-    background-color: green;
-    margin: 10px;
-}
-.bordaazul{
-    margin: 10px;
-    width: 100px;
-    height: 80px;
-    background-color: blue;
-}
-.bordapreta{
-    margin: 10px;
-    width: 100px;
-    height: 80px;
-    background-color: black;
+.botao{
+    height: 40px;
+    width: 40px;
 }
